# Rust-OS-

./: Cargo.toml  Dependencies  LICENSE   README.md
IronVeil/: Cargo.toml
IronVeil/src/: Cargo.toml  main.rs
Nexis/: Cargo.toml  build.rs  linker.ld  x86_64-nexis.json
Nexis/.cargo/: config.toml
Nexis/src/: alloc.rs  context.S  context.rs  fs.rs  interrupt.rs  kb.rs  lib.rs  main.rs  memory.rs  pit.rs  process.rs  scheduler.rs  syscall.rs  syscall_dispatch.rs  task.rs  userland.rs  vga.rs
Nexis/src/asm/: switch.S
Nexis/userland/: Cargo.toml
Nexis/userland/src/: main.rs
src/: main.rs
