[package]
name = "nexis"
version = "0.1.0"
edition = "2021"
publish = false

# Use a release of bootloader known to work with bootimage
[dependencies]
bootloader = "0.11.0"
uart_16550 = "0.2"
spin = "0.9"
lazy_static = "1.4"

[package.metadata.bootimage]
# The filename of the target JSON in this directory
target = "x86_64-nexis.json"
