[package]
name = "nexis"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
bootloader = "0.11.0"
uart_16550 = "0.2"
spin = "0.9"
lazy_static = "1.4"
pc-keyboard = "0.6"
x86_64 = "0.14"
alloc = { package = "alloc", version = "0.0.1", features = [] }
linked_list_allocator = "0.10.5"

[build-dependencies]
cc = "1.0"
